Fix small gap on right side of the screen (mobile) when avatar isn't displayed

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,6 @@ body {
   background-color: #14202B;
   color: #FCF9F5;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden;
 }
 
 section, footer {
